--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
 }
 
 :root {
-  --color-title: ;
+  --bg-color: linear-gradient(180deg, #2A004A 0%, rgba(42, 0, 74, 0) 100%) no-repeat;
+}
+
+body {
+  background: var(--bg-color);
+  width: 100%;
+  height: 100%;
 }
 
